<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Vista.RegistroUsuario.InformacionUsuario">

    <EditText
        android:id="@+id/etEstatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_estatura"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/text_peso"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_genero" />

    <RadioGroup
        android:id="@+id/rdgGrupo"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbFemenino"
        android:layout_column="0"
        android:layout_span="3">
        <RadioButton
            android:id="@+id/rbFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_femenino"/>
        <RadioButton
            android:id="@+id/rbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_masculino"/>
    </RadioGroup>

    <EditText
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/text_fecha_nacimiento"
        android:inputType="date" />

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_siguiente"
        android:onClick="siguiente"/>

</LinearLayout>