<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Vista.RegistroUsuario.InformacionFisica">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_nivel_acondicionamiento" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_objetivo_entrenamiento" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_fumas" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descripcion_tipos_entrenamientos" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbCrossfit"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/rbGimnasio"
            tools:srcCompat="@tools:sample/avatars[2]" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbPesoCorporal"
            tools:srcCompat="@tools:sample/avatars[3]" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/rbCardio"
            tools:srcCompat="@tools:sample/avatars[5]" />

        <CheckBox
            android:id="@+id/rbGimnasio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_gimnasio"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/rbCrossfit" />

        <CheckBox
            android:id="@+id/rbPesoCorporal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/text_peso_corporal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <CheckBox
            android:id="@+id/rbCrossfit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crossfit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/rbCardio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cardio"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/rbPesoCorporal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".50" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_registrarme"
        android:onClick="registrar"/>

</LinearLayout>