<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Vista.Entreno.Iniciar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnIniEjercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_iniciar_ejercicio"/>

        <Button
            android:id="@+id/btnFinEjercicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fin_ejercicio"/>

        <Button
            android:id="@+id/btnFinRutina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_fin_rutina" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvHoras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":" />

            <TextView
                android:id="@+id/tvMinutos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=":" />

            <TextView
                android:id="@+id/tvSegundos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>